<resources>
    <string name="app_name">Cafe Taka</string>
    <string name="small">Small</string>
    <string name="tall">Tall</string>
    <string name="grande">Grande</string>
    <string name="venti">Venti</string>
    <string name="sizeTitle">Select size:</string>
    <string name="coffeeTitle">Add Coffee</string>
    <string name="cream">cream</string>
    <string name="milk">milk</string>
    <string name="syrup">syrup</string>
    <string name="caramel">caramel</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="add_to_order">Add to Order</string>
    <string name="select_add_ins">Select Add-Ins:</string>
    <string name="coffee_subtotal">subtotal</string>
    <string name="main_add_donuts">ADD DONUTS</string>
    <string name="view_current_order">View Current Order</string>
    <string name="view_store_orders">View Store Orders</string>
    <string name="add_coffee">ADD COFFEE</string>
    <string name="order_sales_tax">sales tax:</string>
    <string name="order_total">total:</string>
    <string name="order_place">Place Order</string>
    <string name="order_listview_text">Current Order: (select items on list to remove)</string>
    <string name="order_def_val">$0.00</string>
    <string name="order_subtotal">subtotal:</string>
    <string name="all_donuts_price">All Donuts Subtotal:</string>
    <string name="all_orders_title">All Orders: (select items on list to remove)</string>
    <string name="donut_title">Order Donuts</string>
    <string name="donut_select_flavor">Select Flavor:</string>
    <string name="DO_title">DONUT FLAVOR</string>
    <string name="DO_type_title">Type:</string>
    <string name="DO_amount_title">Amount:</string>
    <string name="DO_remove_text">Remove From Order</string>
    <string name="DO_item_price_title">Item Price:</string>
    <string name="main_title">Welcome to Cafe Taka</string>
    <string name="donut_im_description">Donut</string>
    <string-array name="donutNames">
        <item>Sugar</item>
        <item>Glazed</item>
        <item>Chocolate</item>
        <item>Blueberry</item>
        <item>Red Velvet</item>
        <item>Boston Kreme</item>
        <item>Lemon</item>
        <item>Strawberry</item>
        <item>Vanilla</item>
        <item>Birthday</item>
        <item>Jelly</item>
        <item>Powder</item>
    </string-array>
</resources>